<resources>
    <string name="app_name">Test Task Tinkoff Fintech</string>
    <string name="tinkoff_fintech">Tinkoff Fintech</string>
    <string name="popular">popular</string>
    <string name="favourite">favourite</string>
    <string name="popular_ru">Популярные</string>
    <string name="favourite_ru">Избранное</string>
    <string name="small_film_logo">small film logo</string>
    <string name="dash">-</string>
    <string name="favourite_icon">favourite icon</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="search">Search</string>
    <string name="repeat_ru">Повторить</string>
    <string name="check_connect_ru">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>
    <string name="film_deleted">фильм удален из избранного</string>
    <string name="canceled_ru">отменить</string>
    <string name="film_added_ru">фильм добавлен в избранное</string>
    <string name="film_logo">film logo</string>
    <string name="film_name">(Film name)</string>
    <string name="description">(Description)</string>
    <string name="genre">(Genre)</string>
    <string name="countries">(Countries)</string>
    <string name="im_no_connection">im no connection</string>
</resources>